--- a/.daggerx/templates/module/golang.go.tmpl
+++ b/.daggerx/templates/module/golang.go.tmpl
@@ -429,3 +429,80 @@ func (m *{{.module_name}}) buildGoArgs(opts goBuildCmdOptions) []string {
 
 	return args
 }
+
+// WithGoPrivate configures the GOPRIVATE environment variable for the container environment.
+//
+// This method sets the GOPRIVATE variable, which is used by the Go toolchain to identify
+// private modules or repositories that should not be fetched from public proxies.
+//
+// Parameters:
+// - privateHost (string): The hostname of the private host for the Go packages or modules.
+//
+// Returns:
+// - *{{.module_name}}: A pointer to the updated {{.module_name}} instance.
+func (m *{{.module_name}}) WithGoPrivate(
+	// privateHost is the hostname of the private host for the Go packages or modules.
+	privateHost string,
+) *{{.module_name}} {
+	// Set the GOPRIVATE environment variable within the container
+	m.Ctr = m.Ctr.
+		WithExec(
+			[]string{"go", "env", "GOPRIVATE", privateHost},
+			dagger.ContainerWithExecOpts{
+				InsecureRootCapabilities: true,
+			},
+		).
+		WithEnvVariable("GOPRIVATE", privateHost)
+
+	return m
+}
+
+// WithGoGCCCompiler installs the GCC compiler and development tools in the container environment.
+//
+// This method uses the Alpine package manager (`apk`) to install the GCC compiler along
+// with `musl-dev`, which is the development package of the standard C library on Alpine.
+//
+// Example usage:
+//
+//	{{.module_name}}.WithGCCCompiler()
+//
+// Returns:
+// - *{{.module_name}}: A pointer to the updated {{.module_name}} instance.
+func (m *{{.module_name}}) WithGoGCCCompiler() *{{.module_name}} {
+	m.Ctr = m.Ctr.
+		WithExec([]string{"apk", "add", "--no-cache", "gcc", "musl-dev"})
+
+	return m
+}
+
+// WithGoTestSum installs the GoTestSum tool and its dependency `tparse` in the container environment.
+//
+// This method installs `gotest.tools/gotestsum` and `github.com/mfridman/tparse`
+// using the specified version. If no version is provided, it defaults to "latest".
+//
+// Parameters:
+//   - version (string) +optional: The version of GoTestSum to use, e.g., "v0.8.0".
+//     If empty, it defaults to "latest".
+//
+// Example:
+//
+//	m := &{{.module_name}}{}
+//	m.WithGoTestSum("v0.8.0") // Install specific version
+//	m.WithGoTestSum("")        // Install latest version
+//
+// Returns:
+// - *{{.module_name}}: A pointer to the updated {{.module_name}} instance.
+func (m *{{.module_name}}) WithGoTestSum(
+	// version is the version of GoTestSum to use, e.g., "v0.8.0".
+	// +optional
+	version string,
+) *{{.module_name}} {
+	if version == "" {
+		version = defaultContainerVersion
+	}
+
+	return m.WithGoInstall([]string{
+		"gotest.tools/gotestsum@" + version,
+		"github.com/mfridman/tparse@" + version,
+	})
+}
