--- a/.daggerx/templates/tests/main.go.tmpl
+++ b/.daggerx/templates/tests/main.go.tmpl
@@ -108,6 +108,9 @@ func (m *Tests) TestAll(ctx context.Context) error {
 	// Test IAC specific functions.
 	polTests.Go(m.TestIACWithTerraformUbuntu)
 	polTests.Go(m.TestIACWithTerraformAlpine)
+	// Test Dagger specific functions.
+	polTests.Go(m.TestDaggerWithDaggerCLI)
+	polTests.Go(m.TestDaggerSetupDaggerInDagger)
 
 	// From this point onwards, we're testing the specific functionality of the {{.module_name}} module.
 
