feat: Add base container functions for Alpine, Ubuntu, and BusyBox
This commit introduces new functions to the `{{.module_name}}` struct to set the base container image to Alpine, Ubuntu, or BusyBox Linux. The functions provide optional parameters to specify the version of the base image.

The changes include:

- Add `BaseAlpine()`, `BaseUbuntu()`, and `BaseBusyBox()` methods to the `{{.module_name}}` struct to set the base container image.
- Implement the functions to construct the appropriate image URL based on the base image and version.
- Refactor the `Base()` method to use the new base container functions.
- Add constants for the default base image names and latest tag.
- Update the `TestUbuntuBase()` function in the tests to use the new `BaseUbuntu()` method.

These changes provide a more modular and flexible way to set the base container image for the `{{.module_name}}` module, making it easier to customize the base image as needed.

--- a/.daggerx/templates/module/main.go.tmpl
+++ b/.daggerx/templates/module/main.go.tmpl
@@ -11,8 +11,6 @@
 package main
 
 import (
-	"fmt"
-
 	"github.com/Excoriate/daggerverse/{{.module_name_pkg}}/internal/dagger"
 
 	"github.com/Excoriate/daggerx/pkg/containerx"
@@ -65,7 +63,7 @@ func New(
 		})
 
 		if err != nil {
-			return nil, WrapError(err, "failed to get image URL")
+			return nil, WrapErrorf(err, "failed to get container image URl %s", imageURL)
 		}
 
 		dagModule.Base(imageURL)
@@ -98,70 +96,4 @@ func (m *{{.module_name}}) Base(imageURL string) *{{.module_name}} {
 	m.Ctr = c
 
 	return m
-}
-
-const (
-	defaultAlpineImage  = "alpine"
-	defaultUbuntuImage  = "ubuntu"
-	defaultBusyBoxImage = "busybox"
-)
-
-// BaseAlpine sets the base image to an Alpine Linux image and creates the base container.
-//
-// Parameters:
-// - version: The version of the Alpine image to use. Optional parameter. Defaults to "latest".
-//
-// Returns a pointer to the {{.module_name}} instance.
-func (m *{{.module_name}}) BaseAlpine(
-	// version is the version of the Alpine image to use, e.g., "3.17.3".
-	// +optional
-	version string,
-) *{{.module_name}} {
-	if version == "" {
-		version = "latest"
-	}
-
-	imageURL := fmt.Sprintf("%s:%s", defaultAlpineImage, version)
-
-	return m.Base(imageURL)
-}
-
-// BaseUbuntu sets the base image to an Ubuntu Linux image and creates the base container.
-//
-// Parameters:
-// - version: The version of the Ubuntu image to use. Optional parameter. Defaults to "latest".
-//
-// Returns a pointer to the {{.module_name}} instance.
-func (m *{{.module_name}}) BaseUbuntu(
-	// version is the version of the Ubuntu image to use, e.g., "22.04".
-	// +optional
-	version string,
-) *{{.module_name}} {
-	if version == "" {
-		version = "latest"
-	}
-
-	imageURL := fmt.Sprintf("%s:%s", defaultUbuntuImage, version)
-
-	return m.Base(imageURL)
-}
-
-// BaseBusyBox sets the base image to a BusyBox Linux image and creates the base container.
-//
-// Parameters:
-// - version: The version of the BusyBox image to use. Optional parameter. Defaults to "latest".
-//
-// Returns a pointer to the {{.module_name}} instance.
-func (m *{{.module_name}}) BaseBusyBox(
-	// version is the version of the BusyBox image to use, e.g., "1.35.0".
-	// +optional
-	version string,
-) *{{.module_name}} {
-	if version == "" {
-		version = "latest"
-	}
-
-	imageURL := fmt.Sprintf("%s:%s", defaultBusyBoxImage, version)
-
-	return m.Base(imageURL)
 }
