feat: Add support for GoReleaser and GoLangCILint in module-template and codegen
Includes the following changes:
- Add a new test case `TestGoWithGoReleaserAndGolangCILint` to install and verify the installation of GoReleaser and GoLangCILint using the Go toolbox
- Add new methods `WithGoReleaser` and `WithGoLint` to the `ModuleTemplate` struct to install the respective tools
These changes provide a way to easily set up and use GoReleaser and GoLangCILint in the project, improving the development and release workflow.

--- a/.daggerx/templates/module/golang.go.tmpl
+++ b/.daggerx/templates/module/golang.go.tmpl
@@ -523,3 +523,52 @@ func (m *{{.module_name}}) WithGoTestSum(
 
 	return m.WithGoInstall(pkgs)
 }
+
+// WithGoReleaser installs the GoReleaser tool in the container environment.
+//
+// This method installs `goreleaser` using the specified version. Check
+// https://goreleaser.com/install/
+//
+// Parameters:
+// - version (string): The version of GoReleaser to use, e.g., "v2@latest".
+//
+// Example:
+//
+//	m := &{{.module_name}}{}
+//	m.WithGoReleaser("v2.2.0")  // Install GoReleaser version 2.2.0
+//
+// Returns:
+// - *{{.module_name}}: A pointer to the updated {{.module_name}} instance.
+func (m *{{.module_name}}) WithGoReleaser(
+	// version is the version of GoReleaser to use, e.g., By default, it's set "v2@latest".
+	// +optional
+	version string,
+) *{{.module_name}} {
+	if version == "" {
+		version = "v2@latest"
+	}
+
+	return m.
+		WithGoInstall([]string{"github.com/goreleaser/goreleaser/" + version})
+}
+
+// WithGoLint installs the GoLint tool in the container environment.
+//
+// This method installs `golangci-lint` using the specified version.
+//
+// Parameters:
+// - version (string): The version of GoLint to use, e.g., "v1.60.1".
+//
+// Example:
+//
+//	m := &{{.module_name}}{}
+//	m.WithGoLint("v1.60.1")  // Install GoLint version 1.60.1
+//
+// Returns:
+// - *{{.module_name}}: A pointer to the updated {{.module_name}} instance.
+func (m *{{.module_name}}) WithGoLint(
+	// version is the version of GoLint to use, e.g., "v1.60.1".
+	version string,
+) *{{.module_name}} {
+	return m.WithGoInstall([]string{"github.com/golangci/golangci-lint/cmd/golangci-lint@" + version})
+}
