--- a/.daggerx/templates/tests/main.go.tmpl
+++ b/.daggerx/templates/tests/main.go.tmpl
@@ -120,6 +120,8 @@ func (m *Tests) TestAll(ctx context.Context) error {
 	// Test Dagger specific functions.
 	polTests.Go(m.TestDaggerWithDaggerCLI)
 	polTests.Go(m.TestDaggerSetupDaggerInDagger)
+	// Test Services
+	polTests.Go(m.TestCreateService)
 
 	// From this point onwards, we're testing the specific functionality of the {{.module_name}} module.
 
