feat: Improve codebase structure and add a new Go server
This commit introduces the following changes:

1. Add a new Go server in the `testdata` directory of the `tests` module. The server has the following features:
   - Serves two GET APIs: one that returns a list of fake products, and another that fetches comments from an external API.
   - Handles a flag value passed to the server and echoes it back.
   - Uses the `echo` web framework for the server implementation.

2. Remove the `services.go.tmpl` file from the `module` directory, as it is no longer needed.

The purpose of these changes is to provide a more comprehensive set of test data for the Daggerverse project, including a simple Go server that can be used for integration testing or as a reference for building similar services.

--- a/.daggerx/templates/module/server_go.go.tmpl
+++ b/.daggerx/templates/module/server_go.go.tmpl
@@ -5,7 +5,7 @@ import (
 	"runtime"
 	"strconv"
 
-	"github.com/Excoriate/daggerverse/module-template/internal/dagger"
+	"github.com/Excoriate/daggerverse/{{.module_name_pkg}}/internal/dagger"
 
 	"github.com/Excoriate/daggerx/pkg/containerx"
 	"github.com/Excoriate/daggerx/pkg/fixtures"
@@ -70,7 +70,7 @@ func (m *GoServer) getExecBinaryCMD() []string {
 // Returns:
 //
 // *GoServer: An instance of GoServer configured with a container created from the default image and version.
-func (m *ModuleTemplate) NewGoServer(
+func (m *{{.module_name}}) NewGoServer(
 	// ctr is the container to use as a base container. If it's not set, it'll create a new container.
 	// +optional
 	ctr *dagger.Container,
