--- a/.daggerx/templates/tests/main.go.tmpl
+++ b/.daggerx/templates/tests/main.go.tmpl
@@ -54,9 +54,12 @@ func (m *Tests) getTestDir() *dagger.Directory {
 //
 //nolint:funlen // The test handles multiple commands and environments, requiring a longer function.
 func (m *Tests) TestAll(ctx context.Context) error {
+	maxGoroutines := 10
 	polTests := pool.
 		New().
+		WithMaxGoroutines(maxGoroutines).
 		WithErrors().
+		WithFirstError().
 		WithContext(ctx)
 
 	// Test different ways to configure the base container.
@@ -120,6 +123,7 @@ func (m *Tests) TestAll(ctx context.Context) error {
 	// Test Dagger specific functions.
 	polTests.Go(m.TestDaggerWithDaggerCLI)
 	polTests.Go(m.TestDaggerSetupDaggerInDagger)
+	// Test Go server.
 
 	// From this point onwards, we're testing the specific functionality of the {{.module_name}} module.
 
