feat: Update the module import path in the dagger.go.tmpl file
The changes update the module import path in the `dagger.go.tmpl` file from `github.com/Excoriate/daggerverse/module-template/tests/internal/dagger` to `github.com/Excoriate/daggerverse/{{.module_name_pkg}}/tests/internal/dagger`. This ensures that the correct module import path is used in the generated tests.

--- a/.daggerx/templates/tests/dagger.go.tmpl
+++ b/.daggerx/templates/tests/dagger.go.tmpl
@@ -4,7 +4,7 @@ import (
 	"context"
 	"strings"
 
-	"github.com/Excoriate/daggerverse/module-template/tests/internal/dagger"
+	"github.com/Excoriate/daggerverse/{{.module_name_pkg}}/tests/internal/dagger"
 )
 
 // TestDaggerWithDaggerCLI tests various versions of the Dagger CLI from v0.12.0 to v0.12.4
